--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="controls">
          <button class="reset-filter">Reset Filters</button>
          <div class="row">
-            <input type="file" class="file-input" accept="image/"
+            <input type="file" class="file-input" accept="image/*" hidden>
             <button class="choose-img">Choose image</button>
             <button class="save-img">Save Image</button>
          </div>
